# foodgram

./: README.md  docker-compose.local.yml  docker-compose.yml  setup.cfg
backend/foodgram/: db.sqlite3.bak  pyproject.toml
backend/foodgram/api/: fields.py  filters.py  mixins.py  paginators.py  permissions.py  serializers.py  urls.py  utils.py  views.py
backend/foodgram/foodgram/: constants.py  settings.py
backend/foodgram/recipes/: admin.py  models.py  validators.py
backend/foodgram/recipes/migrations/: 0001_initial.py  0002_ingredient.py  0002_initial.py  0003_alter_ingredient_name.py  0003_alter_ingredientperrecipe_amount.py  0004_ingredientperrecipe_ingredient_recipe_unique.py  0004_recipe_ingredients_alter_recipe_cooking_time.py  0005_favoriterecipe_alter_ingredientperrecipe_options_and_more.py  0006_alter_favoriterecipe_user_shopingcart_and_more.py  0007_recipe_short_link.py  0008_alter_recipe_short_link.py  0009_remove_recipe_author_name_unique_and_more.py  0010_alter_recipe_cooking_time_alter_recipe_short_link.py  0011_alter_favoriterecipe_options_and_more.py  0012_remove_favoriterecipe_recipe_and_more.py  0012_tag_color_alter_favoriterecipe_recipe_and_more.py  0013_alter_recipe_short_link.py  0014_alter_recipe_short_link.py  0015_alter_recipe_short_link.py  0016_alter_recipe_short_link.py  0017_alter_recipe_short_link_alter_tag_color.py  0018_alter_recipe_short_link.py  0019_alter_recipe_short_link_alter_tag_color.py  0021_alter_recipe_short_link.py  (+1 more)
backend/foodgram/tests/: base_test.py  test_auth.py
backend/foodgram/users/: models.py  validators.py
(+37 files in other folders)
