[tool.poetry]
name = "foodgram"
version = "0.1.0"
description = ""
authors = ["rodion <rpadakov@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
djoser = "2.2.2"
asgiref = "3.8.1"
cffi = "1.16.0"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
cryptography = "42.0.7"
defusedxml = "0.8.0rc2"
django = "5.0.6"
certifi = "2024.6.2"
django-filter = "24.2"
django-templated-mail = "1.1.1"
djangorestframework = "3.15.1"
djangorestframework-simplejwt = "5.3.1"
idna = "3.7"
oauthlib = "3.2.2"
pillow = "10.3.0"
psycopg2-binary = "2.9.3"
pycparser = "2.22"
pyjwt = "2.8.0"
python-slugify = "8.0.4"
python3-openid = "3.2.0"
reportlab = "4.2.0"
requests = "2.32.3"
requests-oauthlib = "2.0.0"
shortuuid = "1.0.13"
social-auth-app-django = "5.4.1"
social-auth-core = "4.5.4"
sqlparse = "0.5.0"
text-unidecode = "1.3"
typing-extensions = "4.12.1"
urllib3 = "2.2.1"
gunicorn = "20.1.0"

[tool.poetry.group.documentation.dependencies]
sphinx = "^8.0.2"

[tool.poetry.group.dev.dependencies]
isort = "5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
